# easy_compressor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/easy_compressor/: EasyCompressorPlugin.kt  MediaInfoExtractor.kt  VideoCompressor.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/easy_compressor_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: DebugProfile.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: easy_compressor.podspec
ios/Classes/: EasyCompressorPlugin.swift  MediaInfoExtractor.swift  VideoCompressor.swift
lib/: easy_compressor.dart
lib/src/: compression_config.dart  compression_result.dart  compressor.dart  enums.dart  exceptions.dart  media_info.dart
lib/src/platform/: video_compressor_method_channel.dart  video_compressor_platform_interface.dart  video_compressor_stub.dart
lib/src/utils/: file_utils.dart  quality_mapper.dart
macos/: easy_compressor.podspec
macos/Classes/: EasyCompressorPlugin.swift  MediaInfoExtractor.swift  VideoCompressor.swift
test/: easy_compressor_test.dart  quality_mapper_test.dart
windows/: CMakeLists.txt  easy_compressor_plugin.cpp  easy_compressor_plugin.h  media_info_extractor.cpp  media_info_extractor.h  video_compressor.cpp  video_compressor.h
windows/include/easy_compressor/: easy_compressor_plugin_c_api.h
